syntax = "proto3";

package rivet.backend.pkg.mm.msg.lobby_state_set;

import "proto/common.proto";

/// name = "msg-mm-lobby-state-set"
/// parameters = [
/// 	{ name = "lobby_id" },
/// ]
message Message {
	rivet.common.Uuid lobby_id = 1;
	optional string state_json = 2;
}
